maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:70: error: expected start of definition
override def run() { 
         ^PledgeMaze:74: error: Unmatched closing brace '}' ignored here
}
^